--- a/table/index.html
+++ b/table/index.html
@@ -23,9 +23,9 @@
                 </div>
                 <div class="body">
                     <div class="row">
-                        <div class="column">Semenov Nikita Olegovich</div>
+                        <div class="column">Semenov Nikita Olegov</div>
                         <div class="column">UK</div>
-                        <div class="column">Ukrainian</div>
+                        <div class="column">Ukrain</div>
                         <div class="column">Programmer</div>
                         <div class="column">IT</div>
                         <div class="column">2000</div>
